# scene-gen-llm

./: .gitignore  README.md  fixtures_id  project_base.qxw  pyproject.toml  scene1.qxw  scene_base.qxw
containers/: README.md  docker-compose.yml  ollama.Dockerfile  qlcplus.Dockerfile
docs/: .buildinfo  .buildinfo.bak  api.html  conf.py  genindex.html  index.html  index.md  lighting_methodology.html  lighting_methodology.md  objects.inv  quickstart.html  quickstart.md  search.html  searchindex.js
docs/.doctrees/: api.doctree  environment.pickle  index.doctree  lighting_methodology.doctree  quickstart.doctree
docs/_build/html/: .buildinfo  api.html  genindex.html  index.html  lighting_methodology.html  objects.inv  quickstart.html  search.html  searchindex.js
docs/_build/html/.doctrees/: api.doctree  environment.pickle  index.doctree  lighting_methodology.doctree  quickstart.doctree
docs/_build/html/_sources/: api.md.txt
docs/_build/html/_static/: documentation_options.js
docs/_sources/: api.md.txt  index.md.txt  lighting_methodology.md.txt  quickstart.md.txt
docs_src/: conf.py  quickstart.md  requirements.txt
examples/: README.md  contexts.json  generate_rule_based_set.py
src/scene_gen_llm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/scenegen/: __init__.py  cli.py  fixture_categories.json  fixtures.json  generator.py  llm_client.py  palettes.json  prompt.py  qlc_io.py  rig.py  scene_mapper.py  scene_selector.py  scenes_basic.json  schema.py
tests/: test_placeholder.py  test_qlc_io.py  test_scene_selection.py
