[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scene-gen-llm"
version = "0.0.0"
description = "Esqueleto para generar escenas de QLC+ con LLM."
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
